--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div id="content">
     <!-- Row 1 -->
     <div class="item">
-      <a href="https://vimeo.com/211151781">
+      <a href="reel.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/236EHUuRd5Y3WAJ1A7/giphy.gif" alt="animation demo reel"></div>
         <span>Animation Demo Reel (2017)</span>
       </a>
