--- a/roadblock.html
+++ b/roadblock.html
@@ -52,34 +52,47 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-          <div class="art-display"><div class="full-image loading-icon short-p">
-        <h2>Behind the Cosplay</h2>
-        <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/5ac3d06388251b42df41d002/5af4914eaa4a994407f6c85d/1537982635363/btc_thumb.png?format=2500w"></div><div>
-        <p>Animated and designed video graphics for IGN's <a class="active-link" target="_blank" href="https://www.ign.com/watch/behind-the-cosplay">Behind the Cosplay</a> series centered around cosplaying Iden Versio, the protagonist of Star Wars: Battlefront II.</p>
-        <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/kCnd4X863xc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      </div></div>
+        <h2>IGN Homepage Roadblocks</h2>
+        <p>Homepage roadblocks is IGN's versions of a website takeover where a client can have three different 1900x500 banners loop as the user infinitely scrolls down. These are typically accompanied by a 300x500 unit and/or a sponsored content block. Autoplay videos and embedded videos are sometimes included in these banners.</p><br>
+        <p>Below are some roadblocks I have worked on along with links to any autoplay videos I had to fit to spec.</p>
+      </div>
       <hr>
     </div>
-    <!-- Section 2 -->
+        
+      <!-- Logo -->
+
     <div class="art-section">
       <div class="art-display">
-        <div class="full-image loading-icon short-p">
-          <p>Logo animation based on the idea of stitching cosplay. Logo/title was designed by Matt Kruse.</p>
-          <img src="https://puu.sh/C8fYq/b34e98ad32.gif">
+        <div class="full-image">
+          <p><h2>Mega Man X</h2> Capcom </p>
+          <img src="https://66.media.tumblr.com/65f82aeea89b8ab1a374e0c1f027fdb0/tumblr_pentg9IwJr1tmp8rdo10_r1_1280.png">
         </div>
         <div class="full-image loading-icon">
-          <p>Episode title that appears after the logo animation.</p>
-          <img src="https://puu.sh/BmCDC/a965eedcd6.gif">
+          <img src="https://66.media.tumblr.com/85a2ad811e3b737c9e3104651e8d5f9d/tumblr_pentg9IwJr1tmp8rdo9_r1_1280.png">
         </div>
         <div class="full-image loading-icon">
-          <p>Animated the co-branded snipe that appears at the bottom of the videos.</p>
-          <img src="https://puu.sh/C8eqb.gif">
-        </div>
-        <div class="full-image loading-icon">
-          <p>Animated lower third video asset that was templatized for Video Team's usage.</p>
-          <img src="https://puu.sh/C2ihE/ef74b949d4.gif">
-        </div>
+            <img src="https://66.media.tumblr.com/095bf65740135f04848b072521b2c736/tumblr_pentg9IwJr1tmp8rdo8_r1_1280.png">
+        </div></div></div>
+
+        <div class="art-section">
+                <div class="art-display">
+        <div class="full-image">
+                <p><h2>Jump Force</h2> Pitched to Bandai Namco (June 2018). </p>
+                <p>1900 x 500 banner + IGN Doodle (top left image)</p>
+                <img src="https://66.media.tumblr.com/b1904ccf20913948619bb5ec883d7ea2/tumblr_pex4rlQRen1tmp8rdo4_r1_1280.png">
+              </div>
+              <div class="full-image loading-icon">
+                  <p>970 x 250</p>
+                <img src="https://66.media.tumblr.com/76f85ce0ac910860aafc356463ba97c5/tumblr_pex4rlQRen1tmp8rdo3_r1_1280.png">
+              </div>
+              <div class="full-image loading-icon">
+                  <p>Video Content Block</p>
+                  <img src="https://66.media.tumblr.com/0b8d92ae7734d609734c7bc933683a30/tumblr_pex4rlQRen1tmp8rdo6_r4_1280.png">
+              </div>
+              <div class="full-image loading-icon">
+                    <p>Object Page</p>
+                    <img src="https://66.media.tumblr.com/3857276ea7e4b1a24977ee8a12ce82f4/tumblr_pex4rlQRen1tmp8rdo5_r1_1280.png">
+                </div>
       </div>
       <hr>
     </div>
