--- a/reel.html
+++ b/reel.html
@@ -53,33 +53,12 @@
     <div class="art-section">
       <div class="art-header">
           <div class="art-display"><div class="full-image loading-icon short-p">
-        <h2>Behind the Cosplay</h2>
-        <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/5ac3d06388251b42df41d002/5af4914eaa4a994407f6c85d/1537982635363/btc_thumb.png?format=2500w"></div><div>
-        <p>Animated and designed video graphics for IGN's <a class="active-link" target="_blank" href="https://www.ign.com/watch/behind-the-cosplay">Behind the Cosplay</a> series centered around cosplaying Iden Versio, the protagonist of Star Wars: Battlefront II.</p>
+        <h2>Animation Demo Reel</h2>
+        <p>Demo reel for my motion work up through 2017.  Demo reel for 2018 is in progress!</p>
         <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/kCnd4X863xc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      </div></div>
-      <hr>
-    </div>
-    <!-- Section 2 -->
-    <div class="art-section">
-      <div class="art-display">
-        <div class="full-image loading-icon short-p">
-          <p>Logo animation based on the idea of stitching cosplay. Logo/title was designed by Matt Kruse.</p>
-          <img src="https://puu.sh/C8fYq/b34e98ad32.gif">
-        </div>
-        <div class="full-image loading-icon">
-          <p>Episode title that appears after the logo animation.</p>
-          <img src="https://puu.sh/BmCDC/a965eedcd6.gif">
-        </div>
-        <div class="full-image loading-icon">
-          <p>Animated the co-branded snipe that appears at the bottom of the videos.</p>
-          <img src="https://puu.sh/C8eqb.gif">
-        </div>
-        <div class="full-image loading-icon">
-          <p>Animated lower third video asset that was templatized for Video Team's usage.</p>
-          <img src="https://puu.sh/C2ihE/ef74b949d4.gif">
-        </div>
+        <iframe src="https://player.vimeo.com/video/211151781" width="740" height="460" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <br>
+      </div></div></div></div>
       </div>
       <hr>
     </div>
