--- a/behind-the-cosplay.html
+++ b/behind-the-cosplay.html
@@ -52,7 +52,7 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-          <div class="art-display"><div class="full-image loading-icon short-p">
+          <div class="art-display"><div class="full-image short-p">
         <h2>Behind the Cosplay</h2>
         <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/5ac3d06388251b42df41d002/5af4914eaa4a994407f6c85d/1537982635363/btc_thumb.png?format=2500w">
         <p>Animated and designed video graphics for IGN's <a class="active-link" target="_blank" href="https://www.ign.com/watch/behind-the-cosplay">Behind the Cosplay</a> mini-documentary series centered around cosplaying Iden Versio, the protagonist of Star Wars: Battlefront II.</p>
