--- a/anime-omake.html
+++ b/anime-omake.html
@@ -52,21 +52,18 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-          <h2>Anime Omake</h2>
           <div class="art-display">
-          <div class="full-image loading-icon">
-            <img src="https://78.media.tumblr.com/7499144b65be14fffcfd2eb4dd928cf3/tumblr_peah1mrEIV1tmp8rdo6_r1_1280.jpg">
-            </div>
-        <p>Designed and animated all graphics related to the IGN miniseries "Anime Omake," a series focused on discussing and recommending the latest and greatest anime. </p>
-      </div>
-      </div>
-      <div class="art-display">
-        <div class="full-image loading-icon">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/rbl3Rux2ILg?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-      </div>
-      <hr>
-    </div>
+          <div class="full-image short-p">
+      <h2>ANIME OMAKE</h2>
+      <img src="https://78.media.tumblr.com/7499144b65be14fffcfd2eb4dd928cf3/tumblr_peah1mrEIV1tmp8rdo6_r1_1280.jpg"">
+      <p>Designed and animated all graphics related to the IGN miniseries <a class="active-link" target="_blank" href="https://www.ign.com/watch/anime-omake">Anime Omake</a>, a series focused on discussing and recommending the latest and greatest anime.</p>
+      <br>  
+        <p>Watch an episode below:</p>
+      
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/rbl3Rux2ILg?rel=0" frameborder="0" allow="autoplay; encrypted-media" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+    </div></div>
+
+    <hr>
         
       <!-- Logo -->
 
