--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
         <img src="img/contact.png">
       </div>
       <div id="contact-intro">
-        <h2>Wanna Chat?</h2>
+        <h2>Wanna chat?</h2>
         <p>Feel free to fill out the contact form, e-mail me at <a class="active-link" href="mailto:kathleeon.oum@gmail.com">kathleeon.oum@gmail.com</a>, or message me through my social media.</p>
       </div>
       <div id="contact-social">
