--- a/roadblock.html
+++ b/roadblock.html
@@ -53,46 +53,34 @@
     <div class="art-section">
       <div class="art-header">
         <h2>IGN Homepage Roadblocks</h2>
-        <p>Homepage roadblocks is IGN's versions of a website takeover where a client can have three different 1900x500 banners loop as the user infinitely scrolls down. These are typically accompanied by a 300x500 unit and/or a sponsored content block. Autoplay videos and embedded videos are sometimes included in these banners.</p><br>
-        <p>Below are some roadblocks I have worked on along with links to any autoplay videos I had to fit to spec.</p>
+        <p>Homepage roadblocks are IGN website takeovers where a client can have three different 1900x500 banners loop as the user infinitely scrolls down. These are typically accompanied by a 300x500 unit and/or a sponsored content block. Autoplay videos and embedded videos are sometimes included in these banners.</p><br>
+        <p>Below are some roadblocks I have worked on along with any links to the on-site preview and links to any autoplay videos I had to edit and fit to spec.  IGN site content has been shortened below for easier viewing.</p>
       </div>
       <hr>
-    </div>
         
       <!-- Logo -->
 
     <div class="art-section">
       <div class="art-display">
         <div class="full-image">
-          <p><h2>Mega Man X</h2> Capcom </p>
-          <img src="https://66.media.tumblr.com/65f82aeea89b8ab1a374e0c1f027fdb0/tumblr_pentg9IwJr1tmp8rdo10_r1_1280.png">
-        </div>
-        <div class="full-image loading-icon">
-          <img src="https://66.media.tumblr.com/85a2ad811e3b737c9e3104651e8d5f9d/tumblr_pentg9IwJr1tmp8rdo9_r1_1280.png">
-        </div>
-        <div class="full-image loading-icon">
-            <img src="https://66.media.tumblr.com/095bf65740135f04848b072521b2c736/tumblr_pentg9IwJr1tmp8rdo8_r1_1280.png">
+          <p><h2>Mega Man X - Capcom</h2> <a class="active-link" target="_blank" href="http://adtools.ign.com/special/?id=mega-man-blockbuster">Permalink + Autoplay video </a>(disable any ad blockers) </p>
+          <img src="https://puu.sh/C8OsN.png">
         </div></div></div>
 
         <div class="art-section">
-                <div class="art-display">
+          <div class="art-display">
+            <div class="full-image">
+              <p><h2>Mega Man X - Capcom</h2> <a class="active-link" target="_blank" href="http://adtools.ign.com/special/?id=mega-man-blockbuster">Permalink + Autoplay video </a>(disable any ad blockers) </p>
+              <img src="https://puu.sh/C8OsN.png">
+            </div></div></div>
+
+    <div class="art-section">
+      <div class="art-display">
         <div class="full-image">
-                <p><h2>Jump Force</h2> Pitched to Bandai Namco (June 2018). </p>
-                <p>1900 x 500 banner + IGN Doodle (top left image)</p>
-                <img src="https://66.media.tumblr.com/b1904ccf20913948619bb5ec883d7ea2/tumblr_pex4rlQRen1tmp8rdo4_r1_1280.png">
-              </div>
-              <div class="full-image loading-icon">
-                  <p>970 x 250</p>
-                <img src="https://66.media.tumblr.com/76f85ce0ac910860aafc356463ba97c5/tumblr_pex4rlQRen1tmp8rdo3_r1_1280.png">
-              </div>
-              <div class="full-image loading-icon">
-                  <p>Video Content Block</p>
-                  <img src="https://66.media.tumblr.com/0b8d92ae7734d609734c7bc933683a30/tumblr_pex4rlQRen1tmp8rdo6_r4_1280.png">
-              </div>
-              <div class="full-image loading-icon">
-                    <p>Object Page</p>
-                    <img src="https://66.media.tumblr.com/3857276ea7e4b1a24977ee8a12ce82f4/tumblr_pex4rlQRen1tmp8rdo5_r1_1280.png">
-                </div>
+          <p><h2>Mega Man 11 - Capcom</h2></p>
+          <img src="https://puu.sh/C8OOg/680b74c12d.png">
+        </div></div></div>
+    
       </div>
       <hr>
     </div>
