--- a/roadblock.html
+++ b/roadblock.html
@@ -111,6 +111,13 @@
         <div class="art-section">
           <div class="art-display">
             <div class="full-image">
+              <p><h2>Gamer Days - Intel</h2></p>
+              <img src="https://puu.sh/C9jVo/25786485b9.png">
+            </div></div></div>
+
+        <div class="art-section">
+          <div class="art-display">
+            <div class="full-image">
               <p><h2>Marvel Figures - Hasbro</h2></p>
               <img src="https://puu.sh/C9h1L/bb6df3ab30.png">
             </div></div></div>
