--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
       </a>
     </div>
     <div class="item">
-      <a href="behind-the-cosplay.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/1zkb1tLwY0hZjnEPDy/giphy.gif" alt="behind the cosplay"></div>
-        <span>Behind the Cosplay - IGN Video Series</span>
+      <a href="roadblock.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/6w3ByAo8ewzUm1wPOx/giphy.gif" alt="e3 booth monitors"></div>
+        <span>IGN Homepage Roadblocks</span>
       </a>
     </div>
 
@@ -97,37 +97,50 @@
       </a>
     </div>
     <div class="item">
-      <a href="god-of-war.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/wofsoE6de9uiCO6ykV/giphy.gif" alt="god of war"></div>
-        <span>God of War - IGN Campaign</span>
+      <a href="e3-booth.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/XteMo3UVgqRgRIiUC2/giphy.gif" alt="e3 booth monitors"></div>
+        <span>Booth Monitors - IGN Live at E3</span>
       </a>
     </div>
+    <div class="item">
+      <a href="behind-the-cosplay.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/1zkb1tLwY0hZjnEPDy/giphy.gif" alt="behind the cosplay"></div>
+        <span>Behind the Cosplay - IGN Video Series</span>
+      </a>
+    </div>
+
+    <!-- Row 4 -->
     <div class="item">
       <a href="antman.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/5BYm9rzxIgI1T9OIsP/giphy.gif" alt="antman and the wasp hud"></div>
         <span>Ant-Man and the Wasp - IGN E3 Sponsor</span>
       </a>
     </div>
-
-    <!-- Row 4 -->
-      <div class="item">
-        <a href="e3-booth.html">
-          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/XteMo3UVgqRgRIiUC2/giphy.gif" alt="e3 booth monitors"></div>
-          <span>Booth Monitors - IGN Live at E3</span>
-        </a>
-      </div>
-      <div class="item">
-          <a href="presale.html">
-            <div class="image-container loading-icon"><img src="https://media.giphy.com/media/1n6H1QhMMyuhGennR5/giphy.gif" alt="motion manga"></div>
-            <span>IGN Pre-Sale Mocks</span>
-          </a>
-        </div>
+    <div class="item">
+      <a href="god-of-war.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/wofsoE6de9uiCO6ykV/giphy.gif" alt="god of war"></div>
+        <span>God of War - IGN Campaign</span>
+      </a>
+    </div>
       <div class="item">
         <a href="dailyui.html">
           <div class="image-container loading-icon"><img src="https://media.giphy.com/media/3JNGTvPcbHtMHKu6MH/giphy.gif" alt="behind the cosplay IGN video series"></div>
           <span>DailyUI [Web & Mobile UI]</span>
         </a>
       </div>
+
+
+<!-- Row 5 -->
+
+      <div class="item">
+          <a href="presale.html">
+            <div class="image-container loading-icon"><img src="https://media.giphy.com/media/1n6H1QhMMyuhGennR5/giphy.gif" alt="motion manga"></div>
+            <span>IGN Pre-Sale Mocks</span>
+          </a>
+        </div>
+
+
+
 
   </div>
 
