--- a/roadblock.html
+++ b/roadblock.html
@@ -69,7 +69,7 @@
         <div class="art-section">
           <div class="art-display">
             <div class="full-image">
-              <p><h2>Diablo III on Switch - Blizzard</h2></p>
+              <p><h2>Diablo III on Switch - Blizzard</h2> <a class="active-link" target="_blank" href="https://puu.sh/C9m9U/a7a9313621.mp4">Autoplay video</a></p>
               <img src="https://puu.sh/C9fJ8/bfa7f2171a.png">
             </div></div></div>
 
@@ -97,7 +97,7 @@
             <div class="art-section">
               <div class="art-display">
                 <div class="full-image">
-                  <p><h2>Metro: Exodus - Deep Silver</h2></p>
+                  <p><h2>Metro: Exodus - Deep Silver</h2><a class="active-link" target="_blank" href="https://puu.sh/C9lTS/fd2c1647a1.mp4">Autoplay video</a></p>
                   <img src="https://puu.sh/C9hmV/429dd87771.png">
                 </div></div></div>
 
