--- a/manga.html
+++ b/manga.html
@@ -112,14 +112,7 @@
     
         <div class="art-display">
                 <div class="half-image">
-                        <p>Some non-manga motion artwork.</p>
-                    <img src="https://puu.sh/unxhy/36e50a7f92.png">
-                    <img src="https://media.giphy.com/media/xTiN0M792TkqpmkDlK/source.gif">
-                </div>
-            </div>
-
-        <div class="art-display">
-                <div class="half-image">
+                        <p>Some non-manga motion artwork:</p>
                     <img src="https://puu.sh/uUAV3/a540dee67a.png">
                     <img src="https://media.giphy.com/media/xUPGculjayyugM9FxC/giphy.gif">
                 </div>
@@ -127,17 +120,24 @@
 
         <div class="art-display">
             <div class="half-image">
-                <img src="https://puu.sh/uUKur/5aa2166a58.png">
+                <img src="https://66.media.tumblr.com/f86b28733b6c78ad52ea4b48bb518fe7/tumblr_pitsk0uLcD1tmp8rdo8_r1_1280.jpg">
                 <img src="https://media.giphy.com/media/3o7bu0Qj4MVGlinv7a/giphy.gif">
             </div>
         </div>
 
         <div class="art-display">
                 <div class="half-image">
-                    <img src="https://puu.sh/uUDb6/b4672475a3.png">
+                    <img src="https://66.media.tumblr.com/25e46b373a721d26e54820fe46466d9e/tumblr_pitsk0uLcD1tmp8rdo10_r1_1280.png">
                     <img src="https://media.giphy.com/media/xUPGcnxUpC6wCHNxxm/giphy.gif">
                 </div>
             </div>
+
+            <div class="art-display">
+              <div class="half-image">
+                  <img src="https://66.media.tumblr.com/e6b5f2c77f1fef9d9caeedecb653b371/tumblr_pitsk0uLcD1tmp8rdo9_r1_1280.png">
+                  <img src="https://media.giphy.com/media/xTiN0M792TkqpmkDlK/source.gif">
+              </div>
+          </div>
 
 
 
