--- a/roadblock.html
+++ b/roadblock.html
@@ -32,7 +32,7 @@
 <body>
   <div id="header">
     <div id="logo">
-      <h1><a href="index.html">Kathleen Oum</a></h1>
+      <h1><a href="https://www.kathleenoum.com">Kathleen Oum</a></h1>
       <h2>Graphic &amp; Motion Design</h2>
     </div>
     <div id="menu">
@@ -40,7 +40,7 @@
         <img src="img/bar_menu.svg" alt="menu">
       </div>
       <div id="menu-links">
-        <span><a href="index.html">Portfolio</a></span>
+        <span><a href="https://www.kathleenoum.com">Portfolio</a></span>
         <span><a target="_blank" href="https://drive.google.com/file/d/1irmmwqjdb_iXT6rve7aoKs-2bKsjp2nm/view">Resume</a></span>
         <span><a href="about.html">About</a></span>
         <span><a href="contact.html">Contact</a></span>
@@ -54,7 +54,7 @@
       <div class="art-header">
         <h2>IGN Homepage Roadblocks</h2>
         <p>Homepage roadblocks are IGN website takeovers where a client can have three different 1900x500 banners loop as the user infinitely scrolls down. These are typically accompanied by a 300x500 unit and/or a sponsored content block. Autoplay videos and embedded videos are sometimes included in these banners.</p><br>
-        <p>Below are some roadblocks I have worked on along with any links to the on-site preview and links to any autoplay videos I had to edit and fit to spec.  IGN site content has been shortened below for easier viewing.</p><br>
+        <p>Below are some roadblocks I have worked on along with any links to the on-site preview or links to any autoplay videos I had to edit and fit to spec.  IGN site content has been shortened below for easier viewing.</p><br>
         <p>Live builds done by George Aguila.</p>
       </div>
       <hr>
