--- a/ads.html
+++ b/ads.html
@@ -130,27 +130,27 @@
           <h2>SETLISTS</h2>
         <!--Row 1-->
         <div class="art-display">
-        <div class="half-image loading-icon">
+        <div class="quarter-image loading-icon">
           <img src="https://66.media.tumblr.com/fdafcacff45cffae9e207eafef78b92a/tumblr_piziu5dhLr1tmp8rdo2_500.jpg">
         </div>
-        <div class="half-image loading-icon">
+        <div class="quarter-image loading-icon">
             <img src="https://66.media.tumblr.com/4371bcb618d47643c54ee4ab8dddff26/tumblr_piziu5dhLr1tmp8rdo3_500.jpg">
           </div>
-        <!--Row 2-->
-        <div class="half-image loading-icon">
+        <div class="quarter-image loading-icon">
           <img src="https://66.media.tumblr.com/b031339cf0bb47922c00c3745716f0d0/tumblr_piziu5dhLr1tmp8rdo4_500.jpg">
-        </div>
-        <div class="half-image loading-icon">
+        </div></div>
+         <!--Row 2-->
+         <div class="art-display">
+        <div class="quarter-image loading-icon">
             <img src="https://66.media.tumblr.com/71ccef6bc5269dfefd12f75fdd0a1bc3/tumblr_piziu5dhLr1tmp8rdo5_500.jpg">
           </div>
-        <!--Row 3-->
-        <div class="half-image loading-icon">
+        <div class="quarter-image loading-icon">
           <img src="https://66.media.tumblr.com/4f8402fd083d3b72c9d0be260fe7d1ab/tumblr_piziu5dhLr1tmp8rdo1_500.jpg">
         </div>
-        <!--Row 4-->
-        <div class="half-image loading-icon">
+        <div class="quarter-image loading-icon">
           <img src="https://66.media.tumblr.com/d00e7db54f15db38b9f014bf78e82791/tumblr_piziu5dhLr1tmp8rdo6_500.jpg">
-        </div></div>
+        </div></div></div>
+         <!--Row 3-->
 
 
       </div>
