--- a/ads.html
+++ b/ads.html
@@ -126,6 +126,25 @@
       </div>
 
 
+      <h2>MONITOR GRAPHICS</h2>
+      <p>Background monitor graphics for IGN livestreams and convention sets.</p>
+         <div class="art-display">
+          <div class="quarter-image loading-icon">
+            <img src="https://66.media.tumblr.com/4f8402fd083d3b72c9d0be260fe7d1ab/tumblr_piziu5dhLr1tmp8rdo1_500.jpg">
+          </div>
+          <div class="quarter-image loading-icon">
+            <img src="https://66.media.tumblr.com/d00e7db54f15db38b9f014bf78e82791/tumblr_piziu5dhLr1tmp8rdo6_500.jpg">
+          </div></div></div>
+
+          <h2>CONTENT BLOCKS</h2>
+          <div class="art-display">
+           <div class="quarter-image loading-icon">
+             <img src="https://66.media.tumblr.com/4f8402fd083d3b72c9d0be260fe7d1ab/tumblr_piziu5dhLr1tmp8rdo1_500.jpg">
+           </div>
+           <div class="quarter-image loading-icon">
+             <img src="https://66.media.tumblr.com/d00e7db54f15db38b9f014bf78e82791/tumblr_piziu5dhLr1tmp8rdo6_500.jpg">
+           </div></div></div>
+
 
           <h2>SETLISTS</h2>
         <!--Row 1-->
@@ -152,6 +171,14 @@
         </div></div></div>
          <!--Row 3-->
 
+         <h2>RETAIL MODULES</h2>
+         <div class="art-display">
+          <div class="quarter-image loading-icon">
+            <img src="https://66.media.tumblr.com/4f8402fd083d3b72c9d0be260fe7d1ab/tumblr_piziu5dhLr1tmp8rdo1_500.jpg">
+          </div>
+          <div class="quarter-image loading-icon">
+            <img src="https://66.media.tumblr.com/d00e7db54f15db38b9f014bf78e82791/tumblr_piziu5dhLr1tmp8rdo6_500.jpg">
+          </div></div></div>
 
       </div>
       <hr>
