--- a/manga.html
+++ b/manga.html
@@ -127,7 +127,7 @@
 
         <div class="art-display">
                 <div class="half-image">
-                    <img src="https://66.media.tumblr.com/25e46b373a721d26e54820fe46466d9e/tumblr_pitsk0uLcD1tmp8rdo10_r1_1280.png">
+                    <img src="https://66.media.tumblr.com/2dcb3b151bbf24df7e67fc7e519487c7/tumblr_pitsk0uLcD1tmp8rdo7_r2_540.jpg">
                     <img src="https://media.giphy.com/media/xUPGcnxUpC6wCHNxxm/giphy.gif">
                 </div>
             </div>
