--- a/anime-omake.html
+++ b/anime-omake.html
@@ -121,7 +121,7 @@
               <source src="https://puu.sh/BJZnO.mp4" type="video/mp4">
             </video>
           </div>
-          <div class="full-image loading-icon">
+          <div class="full-image">
             <p>Animated lower thirds templatized for easy use and text editing for the Video Team. </p>
             <video width="100%" autoplay muted loop>
               <source src="https://puu.sh/BJZo5.mp4" type="video/mp4">
