--- a/behind-the-cosplay.html
+++ b/behind-the-cosplay.html
@@ -66,7 +66,7 @@
     <!-- Section 2 -->
     <div class="art-section">
       <div class="art-display">
-        <div class="full-image loading-icon short-p">
+        <div class="full-image short-p">
           <p>Logo animation based on the idea of stitching cosplay. Logo/title was designed by Matt Kruse.</p>
           <img src="https://puu.sh/C8fYq/b34e98ad32.gif">
         </div>
