--- a/antman.html
+++ b/antman.html
@@ -54,7 +54,7 @@
       <div class="art-header">
         <h2>Ant-Man and the Wasp</h2>
         <div class="art-display">
-        <div class="full-image loading-icon">
+        <div class="full-image">
             <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/5ac3d06388251b42df41d002/5b64b1680e2e725edeb632bc/1537982411756/AntmanWasp_thumb.png?format=2500w">
         <p>I was tasked with creating HUD cams based on Ant-Man and Wasp's POV for Disney's sponsorship of IGN's E3 2018 coverage. Inspiration was drawn from their costumes and the movie's ad branding. </p>
       </div>
@@ -80,25 +80,27 @@
         </div>
         <div class="full-image loading-icon">
           <img src="https://78.media.tumblr.com/7ecc5927975bef7076fc549582059b65/tumblr_pcjls4WIzE1tmp8rdo2_1280.png">
-        </div>
-        </div>
+        </div></div>
         <!--Animated versions-->
-        <div class="full-image loading-icon">
-          <p>Animated version over footage. </p>
-          <img src="https://media.giphy.com/media/4Tf0YvlhVyNqUdCAjy/giphy.gif">
-        </div>
-        <div class="full-image loading-icon">
-            <img src="https://media.giphy.com/media/eF8AlSjnH94V503Dej/giphy.gif">
-          </div>
-          <!--Snipe-->
-          <div class="full-image loading-icon">
+        <div class="art-display">
             <p>Animated the branded snipes that appear for a few seconds on the cams </p>
-            <img src="https://puu.sh/B3Jag/9af428f1e2.gif">
+          <div class="half-image loading-icon">
+            <img src="https://media.giphy.com/media/4Tf0YvlhVyNqUdCAjy/giphy.gif">
           </div>
-          <div class="full-image loading-icon">
-              <img src="https://puu.sh/B3Jbb/159a874bc8.gif">
-            </div>
-      </div>
+          <div class="half-image loading-icon">
+              <img src="https://media.giphy.com/media/eF8AlSjnH94V503Dej/giphy.gif">
+            </div></div>
+          <!--Snipe-->
+      <div class="art-display">
+          <p>Animated the branded snipes that appear for a few seconds on the cams </p>
+        <div class="half-image loading-icon">
+          <img src="https://puu.sh/B3Jag/9af428f1e2.gif">
+        </div>
+        <div class="half-image loading-icon">
+            <img src="https://puu.sh/B3Jbb/159a874bc8.gif">
+          </div></div>
+
+
       <hr>
     </div>
   </div>
