--- a/dailyui.html
+++ b/dailyui.html
@@ -72,7 +72,7 @@
         </p>
           <img src="https://media.giphy.com/media/l3q2TD6VWutMbGa9a/source.gif">
         </div>
-          </div>
+        <div class="art-display">
           <div class="full-image loading-icon">
             <p>Day 3 - Landing Page. Redesign of the Tokyo Ghoul Season 1 anime site.
           </p>
@@ -93,14 +93,14 @@
           </p>
             <img src="https://66.media.tumblr.com/bf260f5fd5471c0cb7306e9937817bc0/tumblr_pex4rlQRen1tmp8rdo7_r1_1280.png">
           </div>
-          <div class="full-image loading-icon">
-            <p>Day 9 - Music Player. An anime app where you could click titles and listen to their soundtracks and then favorite the songs you want into your own personal playlist.
-          </p>
+          <p>Day 9 - Music Player. An anime app where you could click titles and listen to their soundtracks and then favorite the songs you want into your own personal playlist.
+            </p>
+          <div class="half-image loading-icon">
             <img src="https://i.giphy.com/media/3ohze1mSSVOLhScq40/source.gif">
           </div>
+          <p>Day 13 - Direct Messaging. An update to tumblr's mobile messaging system that has group chats, more timestamps, night mode, and some of XKit’s and Discord’s customizable settings
+            </p>
           <div class="full-image loading-icon">
-            <p>Day 13 - Direct Messaging. An update to tumblr's mobile messaging system that has group chats, more timestamps, night mode, and some of XKit’s and Discord’s customizable settings
-          </p>
             <img src="https://cdn.dribbble.com/users/808936/screenshots/3372013/gif.gif">
           </div>
         
