--- a/ads.html
+++ b/ads.html
@@ -129,23 +129,25 @@
       <h2>MONITOR GRAPHICS</h2>
       <p>Background monitor graphics for IGN livestreams and convention sets.</p>
          <div class="art-display">
-          <div class="quarter-image loading-icon">
+          <div class="half-image loading-icon">
             <img src="https://66.media.tumblr.com/4f8402fd083d3b72c9d0be260fe7d1ab/tumblr_piziu5dhLr1tmp8rdo1_500.jpg">
           </div>
-          <div class="quarter-image loading-icon">
+          <div class="half-image loading-icon">
             <img src="https://66.media.tumblr.com/d00e7db54f15db38b9f014bf78e82791/tumblr_piziu5dhLr1tmp8rdo6_500.jpg">
           </div></div></div>
 
           <h2>CONTENT BLOCKS</h2>
           <div class="art-display">
-           <div class="quarter-image loading-icon">
+           <div class="full-image loading-icon">
              <img src="https://66.media.tumblr.com/4f8402fd083d3b72c9d0be260fe7d1ab/tumblr_piziu5dhLr1tmp8rdo1_500.jpg">
            </div>
-           <div class="quarter-image loading-icon">
+           <div class="full-image loading-icon">
              <img src="https://66.media.tumblr.com/d00e7db54f15db38b9f014bf78e82791/tumblr_piziu5dhLr1tmp8rdo6_500.jpg">
            </div></div></div>
 
 
+           <div class="art-section">
+           <div class="art-header">
           <h2>SETLISTS</h2>
         <!--Row 1-->
         <div class="art-display">
@@ -171,14 +173,23 @@
         </div></div></div>
          <!--Row 3-->
 
+      <div class="art-section">
+         <div class="art-header">
          <h2>RETAIL MODULES</h2>
          <div class="art-display">
           <div class="quarter-image loading-icon">
-            <img src="https://66.media.tumblr.com/4f8402fd083d3b72c9d0be260fe7d1ab/tumblr_piziu5dhLr1tmp8rdo1_500.jpg">
+            <img src="https://66.media.tumblr.com/5ea265e4123e8ab4bd012c276678f8f8/tumblr_pj17etb3MV1tmp8rdo2_r1_400.jpg">
           </div>
           <div class="quarter-image loading-icon">
-            <img src="https://66.media.tumblr.com/d00e7db54f15db38b9f014bf78e82791/tumblr_piziu5dhLr1tmp8rdo6_500.jpg">
-          </div></div></div>
+            <img src="https://66.media.tumblr.com/4ab629cbb1afc2785b9c15acac6f46a0/tumblr_pj17etb3MV1tmp8rdo3_400.jpg">
+          </div>
+          <div class="quarter-image loading-icon">
+              <img src="https://66.media.tumblr.com/26299669f10bea11be0deb26f9848c3c/tumblr_pj17etb3MV1tmp8rdo4_r1_400.jpg">
+            </div>
+            <div class="quarter-image loading-icon">
+                <img src="https://66.media.tumblr.com/9ec77b4892c0e01622d26148dfeb79dd/tumblr_pj17etb3MV1tmp8rdo1_400.jpg">
+              </div>
+        </div></div>
 
       </div>
       <hr>
