--- a/ads.html
+++ b/ads.html
@@ -125,25 +125,53 @@
       
       </div>
 
-
+      <div class="art-section">
+          <div class="art-header">
       <h2>MONITOR GRAPHICS</h2>
-      <p>Background monitor graphics for IGN livestreams and convention sets.</p>
+      <p>Graphics for IGN livestreams and convention sets.</p>
          <div class="art-display">
+            <!--Row 1-->
           <div class="half-image loading-icon">
-            <img src="https://66.media.tumblr.com/4f8402fd083d3b72c9d0be260fe7d1ab/tumblr_piziu5dhLr1tmp8rdo1_500.jpg">
+            <img src="https://66.media.tumblr.com/03398660a0ab4de3284296baa9cf4963/tumblr_pj17etb3MV1tmp8rdo7_r1_500.jpg">
           </div>
           <div class="half-image loading-icon">
-            <img src="https://66.media.tumblr.com/d00e7db54f15db38b9f014bf78e82791/tumblr_piziu5dhLr1tmp8rdo6_500.jpg">
-          </div></div></div>
+            <img src="https://66.media.tumblr.com/07b0e0e2f9d3f194efc9c0862926ae5a/tumblr_pj17etb3MV1tmp8rdo8_r1_500.jpg">
+          </div>
+           <!--Row 2-->
+          <div class="half-image loading-icon">
+              <img src="https://66.media.tumblr.com/52dfde14fa12b38198f1f45a292f11d5/tumblr_pj17etb3MV1tmp8rdo5_r1_500.jpg">
+            </div>
+            <div class="half-image loading-icon">
+              <img src="https://66.media.tumblr.com/098a56c567e848c270ca04487abe848c/tumblr_pj17etb3MV1tmp8rdo6_r1_500.jpg">
+            </div>
+           <!--Row 3-->
+            <div class="half-image loading-icon">
+                <img src="https://66.media.tumblr.com/51524754ef854690c14b8c84f761fe5a/tumblr_pj17etb3MV1tmp8rdo9_r1_500.jpg">
+              </div>
+              <div class="half-image loading-icon">
+                <img src="https://66.media.tumblr.com/58e8fc49634eb076c1d090564fd537e4/tumblr_pj17etb3MV1tmp8rdo10_r1_500.jpg">
+              </div> 
+          <!--Row 4-->
+        
+        </div></div>
 
-          <h2>CONTENT BLOCKS</h2>
+
+
+
+          <div class="art-section">
+              <div class="art-header">
+          <h2>CONTENT BLOCKS</h2> <p>Content blocks are branded ads on the IGN website that link through to a video or an article.</p></div>
           <div class="art-display">
            <div class="full-image loading-icon">
-             <img src="https://66.media.tumblr.com/4f8402fd083d3b72c9d0be260fe7d1ab/tumblr_piziu5dhLr1tmp8rdo1_500.jpg">
+             <img src="https://66.media.tumblr.com/2f813b37b6794acbee55407a2952091e/tumblr_pj19b9EUTD1tmp8rdo1_r1_1280.jpg">
            </div>
            <div class="full-image loading-icon">
-             <img src="https://66.media.tumblr.com/d00e7db54f15db38b9f014bf78e82791/tumblr_piziu5dhLr1tmp8rdo6_500.jpg">
-           </div></div></div>
+             <img src="https://66.media.tumblr.com/2d756a0c9239d9b85cfd890609516b5a/tumblr_pj19b9EUTD1tmp8rdo2_r1_1280.jpg">
+           </div>
+           <div class="full-image loading-icon">
+              <img src="https://66.media.tumblr.com/d3a057c225f465a4205b3fb36a3f851d/tumblr_pj19b9EUTD1tmp8rdo3_r1_1280.jpg">
+            </div>
+          </div></div>
 
 
            <div class="art-section">
