--- a/ads.html
+++ b/ads.html
@@ -128,31 +128,41 @@
       <div class="art-section">
           <div class="art-header">
       <h2>MONITOR GRAPHICS</h2>
-      <p>Graphics for IGN livestreams and convention sets.</p>
+      <p>Sponsor branded graphics for IGN livestreams and convention sets. Please note that some assets were made by other designers in collaboration, such as logos.</p></div>
          <div class="art-display">
             <!--Row 1-->
-          <div class="half-image loading-icon">
-            <img src="https://66.media.tumblr.com/03398660a0ab4de3284296baa9cf4963/tumblr_pj17etb3MV1tmp8rdo7_r1_500.jpg">
-          </div>
-          <div class="half-image loading-icon">
-            <img src="https://66.media.tumblr.com/07b0e0e2f9d3f194efc9c0862926ae5a/tumblr_pj17etb3MV1tmp8rdo8_r1_500.jpg">
-          </div>
+            <div class="full-image loading-icon">
+                <img src="https://66.media.tumblr.com/0d66ff450306881a52866774f373bd60/tumblr_pj19b9EUTD1tmp8rdo5_r1_1280.jpg">
+              </div>
            <!--Row 2-->
-          <div class="half-image loading-icon">
+           <div class="full-image loading-icon">
+              <img src="https://66.media.tumblr.com/55d59c3d5c1b226da1f8ca86fe862a23/tumblr_pj19b9EUTD1tmp8rdo6_r1_1280.png">
+            </div>
+           <!--Row 3-->
+           <div class="half-image loading-icon">
               <img src="https://66.media.tumblr.com/52dfde14fa12b38198f1f45a292f11d5/tumblr_pj17etb3MV1tmp8rdo5_r1_500.jpg">
             </div>
             <div class="half-image loading-icon">
               <img src="https://66.media.tumblr.com/098a56c567e848c270ca04487abe848c/tumblr_pj17etb3MV1tmp8rdo6_r1_500.jpg">
             </div>
-           <!--Row 3-->
+              <!--Row 4-->
             <div class="half-image loading-icon">
                 <img src="https://66.media.tumblr.com/51524754ef854690c14b8c84f761fe5a/tumblr_pj17etb3MV1tmp8rdo9_r1_500.jpg">
               </div>
               <div class="half-image loading-icon">
                 <img src="https://66.media.tumblr.com/58e8fc49634eb076c1d090564fd537e4/tumblr_pj17etb3MV1tmp8rdo10_r1_500.jpg">
               </div> 
-          <!--Row 4-->
-        
+          <!--Row 5-->
+          <div class="half-image loading-icon">
+              <img src="https://66.media.tumblr.com/03398660a0ab4de3284296baa9cf4963/tumblr_pj17etb3MV1tmp8rdo7_r1_500.jpg">
+            </div>
+            <div class="half-image loading-icon">
+              <img src="https://66.media.tumblr.com/07b0e0e2f9d3f194efc9c0862926ae5a/tumblr_pj17etb3MV1tmp8rdo8_r1_500.jpg">
+            </div>
+            <!--Row 6-->
+              <div class="full-image loading-icon">
+                  <img src="https://66.media.tumblr.com/9d198db896a902158bcfce654198c6fe/tumblr_pj19b9EUTD1tmp8rdo4_r2_1280.jpg">
+                </div>
         </div></div>
 
 
