--- a/reel.html
+++ b/reel.html
@@ -52,17 +52,22 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-          <div class="art-display"><div class="full-image loading-icon short-p">
-        <h2>Animation Demo Reel</h2>
-        <p>Demo reel for my motion work up through 2017.  Demo reel for 2018 is in progress!</p>
-        <br>
-        <iframe src="https://player.vimeo.com/video/211151781" width="740" height="460" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        <br>
-      </div></div></div></div>
+        <div class="art-display">
+          <div class="full-image loading-icon short-p">
+            <h2>Animation Demo Reel</h2>
+            <p>Demo reel for my motion work up through 2017.  Demo reel for 2018 is in progress!</p>
+            <br>
+            <div class='embed-container'>
+              <iframe src='https://player.vimeo.com/video/211151781' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            </div>
+            <!-- <iframe src="https://player.vimeo.com/video/211151781" width="740" height="460" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
+            <br>
+          </div>
+        </div>
       </div>
-      <hr>
     </div>
   </div>
+  <hr>
 
 </body>
 </html>
