--- a/miniscroller.html
+++ b/miniscroller.html
@@ -53,20 +53,28 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Miniscrollers</h2>
-        <p>Homepage roadblocks are IGN website takeovers where a client can have three different 1900x500 banners loop as the user infinitely scrolls down. These are typically accompanied by a 300x500 unit and/or a sponsored content block. Autoplay videos and embedded videos are sometimes included in these banners.</p>
-      </div>
-      <hr>
-
-    <div class="art-section">
-      <div class="art-display">
-        <div class="full-image">
-          <p><h2>Okami HD</h2> <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/a94d9c05"></a>Scroll here! (disable any ad blockers)</p>
-          <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/t/5babcecc53450a3b2b5d8f37/1537986284208/okami.jpg?format=500w">
-        </div></div></div>
-    
+        <p>Homepage roadblocks are IGN website takeovers where a client can have three different 1900x500 banners loop as the user infinitely scrolls down.
+          These are typically accompanied by a 300x500 unit and/or a sponsored content block.
+          Autoplay videos and embedded videos are sometimes included in these banners.</p>
       </div>
       <hr>
     </div>
+
+    <!-- Section 2 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Okami HD</h2>
+        <p><a class="active-link" target="_blank" href="http://ign.celtra.com/preview/a94d9c05">Scroll here!</a> (disable any ad blockers)</p>
+      </div>
+      <div class="art-display">
+        <!-- Row 1 -->
+        <div class="full-image loading-icon">
+          <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/t/5babcecc53450a3b2b5d8f37/1537986284208/okami.jpg?format=500w">
+        </div>
+      </div>
+    </div>
+    
+    <hr>
   </div>
 
 </body>
