--- a/vector.html
+++ b/vector.html
@@ -57,48 +57,56 @@
         <p>Details and more can be found on my <a class="active-link" target="_blank" href="https://dribbble.com/kaeveeoh">Dribbble page</a>.</p>
       </div>
       <div class="art-display">
+        <!-- Row 1 -->
         <div class="half-image loading-icon">
           <img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://78.media.tumblr.com/003cb15849b1d7fe8764467e424a9c25/tumblr_ouwn0m07ug1vihf3to1_r1_540.gif">
         </div>
+        <!-- Row 2 -->
         <div class="half-image loading-icon">
           <img src="https://cdn.dribbble.com/users/808936/screenshots/3395283/dribbble.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://cdn.dribbble.com/users/808936/screenshots/3403951/drib.gif">
         </div>
+        <!-- Row 3 -->
         <div class="half-image loading-icon">
           <img src="https://78.media.tumblr.com/4e83c08c6e61730b19561c7695e6dcdd/tumblr_ouwn6mONOf1vihf3to1_540.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://78.media.tumblr.com/8464645b1e64c208fe53bcc3c66c6b85/tumblr_p3wnomIArf1vihf3to1_r2_540.gif">
         </div>
+        <!-- Row 4 -->
         <div class="half-image loading-icon">
           <img src="https://cdn.dribbble.com/users/808936/screenshots/4739296/cactus-for-dribbble.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://cdn.dribbble.com/users/808936/screenshots/3954017/cat-dribbble.png">
         </div>
+        <!-- Row 5 -->
         <div class="half-image loading-icon">
           <img src="https://78.media.tumblr.com/0b088b526b4522c2374812a45d4ae56d/tumblr_oopp36hHXk1vihf3to1_r3_540.png">
         </div>
         <div class="half-image loading-icon">
           <img src="https://78.media.tumblr.com/e0ddd0c1824efa39d7d7e677ed8b092c/tumblr_oocol06XpX1vihf3to1_r1_540.png">
         </div>
+        <!-- Row 6 -->
         <div class="half-image loading-icon">
           <img src="https://cdn.dribbble.com/users/808936/screenshots/3437540/donuts.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://cdn.dribbble.com/users/808936/screenshots/3218057/1.gif">
         </div>
+        <!-- Row 7 -->
         <div class="half-image loading-icon">
           <img src="https://78.media.tumblr.com/1621ff9d09491278c02f8f1b1db8b28a/tumblr_o0vftjMz6J1tmp8rdo1_540.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://78.media.tumblr.com/a62889467258824be0f9a5a9dbb34e3d/tumblr_o0vftjMz6J1tmp8rdo2_r1_540.gif">
         </div>
+        <!-- Row 8 -->
         <div class="quarter-image loading-icon">
           <img src="https://78.media.tumblr.com/59035d36ca51981e63b7c1381d46dca2/tumblr_od3b5si7my1tmp8rdo4_r2_250.gif">
         </div>
@@ -111,12 +119,14 @@
         <div class="quarter-image loading-icon">
           <img src="https://78.media.tumblr.com/6a4a7cab2e2d0e2dd6964e52b72cce6c/tumblr_od3b5si7my1tmp8rdo5_r3_250.gif">
         </div>
+        <!-- Row 9 -->
         <div class="half-image loading-icon">
           <img src="https://cdn.dribbble.com/users/808936/screenshots/3432408/burger-dribbble.png">
         </div>
         <div class="half-image loading-icon">
           <img src="https://cdn.dribbble.com/users/808936/screenshots/3425457/pizza-drib.png">
         </div>
+        <!-- Row 10 -->
         <div class="half-image loading-icon">
           <img src="https://cdn.dribbble.com/users/808936/screenshots/3447184/fries-dribbble.png">
         </div>
