--- a/god-of-war.html
+++ b/god-of-war.html
@@ -53,15 +53,20 @@
     <div class="art-section">
       <div class="art-header">
         <h2>God of War</h2>
-        <p>Ads and animation done for Sony's God of War campaign that ran on IGN's website and IGN's Daily Fix series. 3D axe intro animation done by Jack Taylor.</p>
+        <p>Ads and animation done for Sony's God of War campaign that ran on IGN's website and IGN's Daily Fix series.
+          3D axe intro animation done by Jack Taylor.</p>
       </div>
       <div class="art-display">
+        <!-- Row 1 -->
         <div class="full-image loading-icon">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/8hekr7DcTSg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <div class="embed-container">
+            <iframe src="https://www.youtube.com/embed/8hekr7DcTSg" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          </div>
         </div>
       </div>
       <hr>
     </div>
+
     <!-- Section 2 -->
     <div class="art-section">
       <div class="art-header">
@@ -69,43 +74,54 @@
         <p>Designed the background monitors and animated the custom segment transition scenes for the sponsored Daily Fix video.</p>
       </div>
       <div class="art-display">
+        <!-- Row 1 -->
         <div class="full-image loading-icon">
           <img src="https://78.media.tumblr.com/d744cb2b63391f32949985179af90d2b/tumblr_pcjls4WIzE1tmp8rdo7_r1_1280.png">
         </div>
+        <!-- Row 2 -->
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
             <source src="https://puu.sh/BK09V/81b32926e5.mp4" type="video/mp4">
-            </video>
+          </video>
         </div>
       </div>
       <hr>
     </div>
+
     <!-- Section 3 -->
     <div class="art-section">
-        <div class="art-header">
-          <h2>IGN Home Page Banners</h2>
-          <p>Used existing assets to design each banner within a safe zone. Banner images looped as the viewer scrolled. Also edited together a 10 second auto video to play before the first banner. Backend build done by George Aguila.</p>
-          <br>
-          <p><a class="active-link" target="_blank" href="http://adtools.ign.com/special/?id=gow-blockbuster">View the live roadblocks + video here</a> (turn off any ad blockers)</p>
-        </div>
-        <div class="art-display">
-          <div class="full-image loading-icon">
-            <video width="100%" autoplay muted loop>
-              <source src="https://puu.sh/BFhBV/fed38d8be6.mp4" type="video/mp4">
-              </video>
-          </div>
-          <div class="full-image loading-icon">
-            <img src="https://78.media.tumblr.com/071647648e39c6d25c206ce418dca00e/tumblr_pcjls4WIzE1tmp8rdo5_r2_1280.png">
-          </div>
-          <div class="full-image loading-icon">
-            <img src="https://78.media.tumblr.com/e4628980115f6eecd90f12e343b69a4b/tumblr_pcjls4WIzE1tmp8rdo3_r2_1280.png">
-          </div>
-          <div class="full-image loading-icon">
-            <img src="https://78.media.tumblr.com/aa8ccd374ffd9603447da2a227cd8d24/tumblr_pcjls4WIzE1tmp8rdo4_r2_1280.png">
-          </div>
-        </div>
-        <hr>
+      <div class="art-header">
+        <h2>IGN Home Page Banners</h2>
+        <p>Used existing assets to design each banner within a safe zone.
+          Banner images looped as the viewer scrolled.
+          Also edited together a 10 second auto video to play before the first banner.
+          Backend build done by George Aguila.</p>
+        <br>
+        <p><a class="active-link" target="_blank" href="http://adtools.ign.com/special/?id=gow-blockbuster">View the live roadblocks + video here</a> (turn off any ad blockers)</p>
       </div>
+      <div class="art-display">
+        <!-- Row 1 -->
+        <div class="full-image loading-icon">
+          <video width="100%" autoplay muted loop>
+            <source src="https://puu.sh/BFhBV/fed38d8be6.mp4" type="video/mp4">
+          </video>
+        </div>
+        <!-- Row 2 -->
+        <div class="full-image loading-icon">
+          <img src="https://78.media.tumblr.com/071647648e39c6d25c206ce418dca00e/tumblr_pcjls4WIzE1tmp8rdo5_r2_1280.png">
+        </div>
+        <!-- Row 3 -->
+        <div class="full-image loading-icon">
+          <img src="https://78.media.tumblr.com/e4628980115f6eecd90f12e343b69a4b/tumblr_pcjls4WIzE1tmp8rdo3_r2_1280.png">
+        </div>
+        <!-- Row 4 -->
+        <div class="full-image loading-icon">
+          <img src="https://78.media.tumblr.com/aa8ccd374ffd9603447da2a227cd8d24/tumblr_pcjls4WIzE1tmp8rdo4_r2_1280.png">
+        </div>
+      </div>
+    </div>
+
+  <hr>
   </div>
 
 </body>
