--- a/presale.html
+++ b/presale.html
@@ -57,44 +57,65 @@
       </div>
       <hr>
     </div>
-        
-      <!-- Logo -->
 
+    <!-- Section 2 -->
     <div class="art-section">
+      <div class="art-header">
+        <h2>Pokemon</h2>
+        <p>Pitched to Nintendo (2018).</p>
+      </div>
       <div class="art-display">
-        <div class="full-image">
-          <p><h2>Pokemon</h2> Pitched to Nintendo (2018). </p>
+        <!-- Row 1 -->
+        <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/65f82aeea89b8ab1a374e0c1f027fdb0/tumblr_pentg9IwJr1tmp8rdo10_r1_1280.png">
         </div>
+        <!-- Row 2 -->
         <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/85a2ad811e3b737c9e3104651e8d5f9d/tumblr_pentg9IwJr1tmp8rdo9_r1_1280.png">
         </div>
+        <!-- Row 3 -->
         <div class="full-image loading-icon">
-            <img src="https://66.media.tumblr.com/095bf65740135f04848b072521b2c736/tumblr_pentg9IwJr1tmp8rdo8_r1_1280.png">
-        </div></div></div>
-
-        <div class="art-section">
-                <div class="art-display">
-        <div class="full-image">
-                <p><h2>Jump Force</h2> Pitched to Bandai Namco (June 2018). </p>
-                <p>1900 x 500 banner + IGN Doodle (top left image)</p>
-                <img src="https://66.media.tumblr.com/b1904ccf20913948619bb5ec883d7ea2/tumblr_pex4rlQRen1tmp8rdo4_r1_1280.png">
-              </div>
-              <div class="full-image loading-icon">
-                  <p>970 x 250</p>
-                <img src="https://66.media.tumblr.com/76f85ce0ac910860aafc356463ba97c5/tumblr_pex4rlQRen1tmp8rdo3_r1_1280.png">
-              </div>
-              <div class="full-image loading-icon">
-                  <p>Video Content Block</p>
-                  <img src="https://66.media.tumblr.com/0b8d92ae7734d609734c7bc933683a30/tumblr_pex4rlQRen1tmp8rdo6_r4_1280.png">
-              </div>
-              <div class="full-image loading-icon">
-                    <p>Object Page</p>
-                    <img src="https://66.media.tumblr.com/3857276ea7e4b1a24977ee8a12ce82f4/tumblr_pex4rlQRen1tmp8rdo5_r1_1280.png">
-                </div>
+          <img src="https://66.media.tumblr.com/095bf65740135f04848b072521b2c736/tumblr_pentg9IwJr1tmp8rdo8_r1_1280.png">
+        </div>
       </div>
-      <hr>
     </div>
+
+    <!-- Section 3 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Jump Force</h2>
+        <p>Pitched to Bandai Namco (June 2018).<br>1900 x 500 banner + IGN Doodle (top left image)</p>
+      </div>
+      <div class="art-display">
+        <!-- Row 1 -->
+        <div class="full-image loading-icon">
+          <img src="https://66.media.tumblr.com/b1904ccf20913948619bb5ec883d7ea2/tumblr_pex4rlQRen1tmp8rdo4_r1_1280.png">
+        </div>
+        <!-- Row 2 -->
+        <div class="art-sub-header">
+          <p>970 x 250</p>
+        </div>
+        <div class="full-image loading-icon">
+          <img src="https://66.media.tumblr.com/76f85ce0ac910860aafc356463ba97c5/tumblr_pex4rlQRen1tmp8rdo3_r1_1280.png">
+        </div>
+        <!-- Row 3 -->
+        <div class="art-sub-header">
+          <p>Video Content Block</p>
+        </div>
+        <div class="full-image loading-icon">
+          <img src="https://66.media.tumblr.com/0b8d92ae7734d609734c7bc933683a30/tumblr_pex4rlQRen1tmp8rdo6_r4_1280.png">
+        </div>
+        <!-- Row 4 -->
+        <div class="art-sub-header">
+            <p>Object Page</p>
+        </div>
+        <div class="full-image loading-icon">
+          <img src="https://66.media.tumblr.com/3857276ea7e4b1a24977ee8a12ce82f4/tumblr_pex4rlQRen1tmp8rdo5_r1_1280.png">
+        </div>
+      </div>
+    </div>
+
+    <hr>
   </div>
 
 </body>
