--- a/roadblock.html
+++ b/roadblock.html
@@ -53,78 +53,138 @@
     <div class="art-section">
       <div class="art-header">
         <h2>IGN Homepage Roadblocks</h2>
-        <p>Homepage roadblocks are IGN website takeovers where a client can have three different 1900x500 banners loop as the user infinitely scrolls down. These are typically accompanied by a 300x500 unit and/or a sponsored content block. Autoplay videos and embedded videos are sometimes included in these banners.</p><br>
-        <p>Below are some roadblocks I have worked on along with any links to the on-site preview or links to any autoplay videos I had to edit and fit to spec.  IGN site content has been shortened below for easier viewing.</p><br>
+        <p>Homepage roadblocks are IGN website takeovers where a client can have three different 1900x500 banners loop as the user infinitely scrolls down.
+          These are typically accompanied by a 300x500 unit and/or a sponsored content block.
+          Autoplay videos and embedded videos are sometimes included in these banners.</p>
+        <br>
+        <p>Below are some roadblocks I have worked on along with any links to the on-site preview or links to any autoplay videos I had to edit and fit to spec.
+          IGN site content has been shortened below for easier viewing.</p>
+        <br>
         <p>Live builds done by George Aguila.</p>
       </div>
       <hr>
-
-    <div class="art-section">
-      <div class="art-display">
-        <div class="full-image">
-          <p><h2>Mega Man X - Capcom</h2> <a class="active-link" target="_blank" href="http://adtools.ign.com/special/?id=mega-man-blockbuster">Permalink + Autoplay video </a>(disable any ad blockers) </p>
-          <img src="https://puu.sh/C8OsN.png">
-        </div></div></div>
-
-        <div class="art-section">
-          <div class="art-display">
-            <div class="full-image">
-              <p><h2>Diablo III on Switch - Blizzard</h2> <a class="active-link" target="_blank" href="https://puu.sh/C9m9U/a7a9313621.mp4">Autoplay video</a></p>
-              <img src="https://puu.sh/C9fJ8/bfa7f2171a.png">
-            </div></div></div>
-
-            <div class="art-section">
-              <div class="art-display">
-                <div class="full-image">
-                  <p><h2>Fallout 76 - Bethesda</h2></p>
-                  <img src="https://puu.sh/C9fqu/687096ed8c.png">
-                </div></div></div>
-
-                <div class="art-section">
-                  <div class="art-display">
-                    <div class="full-image">
-                      <p><h2>Assassin's Creed Odyssey - Ubisoft</h2></p>
-                      <img src="https://puu.sh/C9glz/ab59f79095.png">
-                    </div></div></div>
-
-        <div class="art-section">
-          <div class="art-display">
-            <div class="full-image">
-              <p><h2>Soulcalibur VI - Bandai Namco</h2></p>
-              <img src="https://puu.sh/C9fYx/34d8501eee.png">
-            </div></div></div>
-
-            <div class="art-section">
-              <div class="art-display">
-                <div class="full-image">
-                  <p><h2>Metro: Exodus - Deep Silver</h2><a class="active-link" target="_blank" href="https://puu.sh/C9lTS/fd2c1647a1.mp4">Autoplay video</a></p>
-                  <img src="https://puu.sh/C9hmV/429dd87771.png">
-                </div></div></div>
-
-    <div class="art-section">
-      <div class="art-display">
-        <div class="full-image">
-          <p><h2>Mega Man 11 - Capcom</h2></p>
-          <img src="https://puu.sh/C8OOg/680b74c12d.png">
-        </div></div></div>
-
-        <div class="art-section">
-          <div class="art-display">
-            <div class="full-image">
-              <p><h2>Gamer Days - Intel</h2></p>
-              <img src="https://puu.sh/C9jVo/25786485b9.png">
-            </div></div></div>
-
-        <div class="art-section">
-          <div class="art-display">
-            <div class="full-image">
-              <p><h2>Marvel Figures - Hasbro</h2></p>
-              <img src="https://puu.sh/C9h1L/bb6df3ab30.png">
-            </div></div></div>
-    
-      </div>
-      <hr>
     </div>
+
+    <!-- Section 2 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Mega Man X - Capcom</h2>
+        <p><a class="active-link" target="_blank" href="http://adtools.ign.com/special/?id=mega-man-blockbuster">Permalink + Autoplay video</a> (disable any ad blockers)</p>
+      </div>
+      <div class="art-display">
+        <!-- Row 1 -->
+        <div class="full-image loading-icon">
+          <img src="https://puu.sh/C8OsN.png">
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 3 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Diablo III on Switch - Blizzard</h2>
+        <p><a class="active-link" target="_blank" href="https://puu.sh/C9m9U/a7a9313621.mp4">Autoplay video</a></p>
+      </div>
+      <div class="art-display">
+        <!-- Row 1 -->
+        <div class="full-image loading-icon">
+          <img src="https://puu.sh/C9fJ8/bfa7f2171a.png">
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 4 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Fallout 76 - Bethesda</h2>
+      </div>
+      <div class="art-display">
+        <!-- Row 1 -->
+        <div class="full-image loading-icon">
+          <img src="https://puu.sh/C9fqu/687096ed8c.png">
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 5 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Assassin's Creed Odyssey - Ubisoft</h2>
+      </div>
+      <div class="art-display">
+        <!-- Row 1 -->
+        <div class="full-image loading-icon">
+          <img src="https://puu.sh/C9glz/ab59f79095.png">
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 6 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Soulcalibur VI - Bandai Namco</h2>
+      </div>
+      <div class="art-display">
+        <!-- Row 1 -->
+        <div class="full-image loading-icon">
+          <img src="https://puu.sh/C9fYx/34d8501eee.png">
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 7 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Metro: Exodus - Deep Silver</h2>
+        <p><a class="active-link" target="_blank" href="https://puu.sh/C9lTS/fd2c1647a1.mp4">Autoplay video</a></p>
+      </div>
+      <div class="art-display">
+        <!-- Row 1 -->
+        <div class="full-image loading-icon">
+          <img src="https://puu.sh/C9hmV/429dd87771.png">
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 8 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Mega Man 11 - Capcom</h2>
+      </div>
+      <div class="art-display">
+        <!-- Row 1 -->
+        <div class="full-image loading-icon">
+          <img src="https://puu.sh/C8OOg/680b74c12d.png">
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 9 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Gamer Days - Intel</h2>
+      </div>
+      <div class="art-display">
+        <div class="full-image loading-icon">
+          <img src="https://puu.sh/C9jVo/25786485b9.png">
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 10 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Marvel Figures - Hasbro</h2>
+      </div>
+      <div class="art-display">
+        <!-- Row 1 -->
+        <div class="full-image loading-icon">
+          <img src="https://puu.sh/C9h1L/bb6df3ab30.png">
+        </div>
+      </div>
+    </div>
+    
+    <hr>
   </div>
 
 </body>
